# clarion-icub-integration

./: CMakeLists.txt  README.md
app/: humanoidsDemo.xml.template
docker/: Dockerfile
modules/: CMakeLists.txt
modules/clarionInterface/: CMakeLists.txt  clarionInterface.thrift
modules/clarionInterface/include/: clarionInterface.h  clarionInterfaceThread.h
modules/clarionInterface/src/: clarionInterface.cpp  clarionInterfaceThread.cpp  main.cpp
